--- a/index.html
+++ b/index.html
@@ -150,10 +150,15 @@
    VARIÁVEIS FÁCEIS DE ALTERAR
    ========================= */
 const CONFIG = {
-  senha: "minhaSenha123",           // <-- alterar senha aqui
-  titulo: "Bem-vindo à Estética Minimalista", // <-- título (abaixo da imagem)
-  texto: `Texto sobre estética.
-Você pode colocar várias linhas.`, // <-- texto livre
+  senha: "deadoralive",           // <-- alterar senha aqui
+  titulo: "Troll mutante", // <-- título (abaixo da imagem)
+  texto: `Eles dizem que ele vive nas bordas do pântano, onde a neblina gruda nos ossos e até os corvos evitam pousar. Eu sei que existe porque o vi. O vi me olhando de cima de um tronco podre, as mãos deformadas se contorcendo como se tivessem vida própria. Não era humano, não era nada que pudesse existir na sanidade de alguém. Um troll mutante, dizem os mais velhos — uma aberração feita de carne e sombra, que cresce com cada cicatriz que carrega.
+
+Eu estava com o grupo de caçadores, todos armados até os dentes, jurando que era “vivo ou morto”. Mas ao se mover, ele não fazia barulho. Cada passo parecia sugar a própria luz ao redor, como se o mundo estivesse com medo de testemunhar. Atirei uma flecha, e ela simplesmente… se curvou, desviando da pele escamosa e mutante. O resto do grupo gritava, enlouquecido.
+
+Ele atacou com força brutal. Braços que se alongavam de forma impossível agarraram Josué e o arrastaram para o brejo. Não dava para ver mais nada além da água negra borbulhando e o grito abafado do meu amigo. Tentamos recuar, mas ele sabia cada passo do terreno. Era como se o pântano fosse parte dele. Cada instante que passava, mais a fera parecia rir — uma risada gutural, carregada de sangue e ferro.
+
+No fim, só restou eu, sujo de lama e horror. Vi o brilho nos olhos dele, vermelho como brasas, me perseguindo enquanto eu corria. “Vivo ou morto”, pensei, mas de repente percebi que talvez eu fosse apenas mais uma história para ele contar, se monstros soubessem contar histórias.`, // <-- texto livre
   imagem: "zero.jpg",        // <-- nome do arquivo exato (coloque na mesma pasta)
   terminalDelayMs: 700,
   typingSpeed: 16,                  // velocidade do efeito de digitação do conteúdo
